--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ workflow:
 
 stages:
   - 00-configure-solution
-  - 01-revert-solution
-  - 02-publish
+  - 01-test-solution
+  - 02-revert-solution
 
 default:
   image: "pingdevops.com/ci-utils/docker-builds-runner:edb6f37cedb342138aca215a69474e679b55390d5150ce8400eac264f2a864ae"
@@ -31,15 +31,13 @@ configure-solution:
     script:
       - "./.gitlab-ci/00-configure-solution.sh"
 
+test-solution:
+    stage: 01-test-solution
+    script:
+      - "./.gitlab-ci/01-test-solution.sh"
+
 revert-solution:
-  stage: 01-revert-solution
+  stage: 02-revert-solution
   when: always
   script:
-    - "./.gitlab-ci/01-revert-solution.sh"
-
-publish:
-  stage: 02-publish
-  rules:
-    - if: $CI_COMMIT_TAG =~ /\d\.\d[-][a-z]{1,}/
-  script:
-    - "./.gitlab-ci/02-publish.sh"
+    - "./.gitlab-ci/02-revert-solution.sh"
