--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ workflow:
 stages:
   - 00-to-the-moon
   - 01-configured-test
-  - 02-spin-that-car-around
+  - 02-spin-that-rocket-around
   - 03-reverted-test
   - 04-back-from-the-moon
 
