--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ stages:
   - 04-back-from-the-moon
 
 default:
-  image: cypress/browsers:$DOCKER_IMAGE_VER
+  #image: cypress/browsers:$DOCKER_IMAGE_VER
+  image: cypress/included:$CYPRESS_VERSION
   services:
     - name: "docker:18.09-dind"
   tags:
@@ -24,25 +25,25 @@ variables:
   DOCKER_API_VERSION: "1.39"
   KUBERNETES_CPU_REQUEST: "1250m"
   KUBERNETES_CPU_LIMIT: "2000m"
-  KUBERNETES_MEMORY_REQUEST: "2555Mi"
-  KUBERNETES_MEMORY_LIMIT: "2555Mi"
+  KUBERNETES_MEMORY_REQUEST: "4000Mi"
+  KUBERNETES_MEMORY_LIMIT: "4000Mi"
   KUBERNETES_POLL_TIMEOUT: 600
 
 configure-solution:
   stage: 00-to-the-moon
   script:
     #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
-    - npm ci
+    #- npm init -y && npm install cypress --save-dev
+    #- npm ci
     # show all installed versions of Cypress binary
-    - npx cypress cache list
+    #- npx cypress cache list
     # print CI environment variables for reference
-    - npx cypress verify
+    #- npx cypress verify
     #set up scripts for cypress environment configuration
     - "./.gitlab-ci/00-base-environment-creation.sh"
     #extra arg due to mem problems crashing the runner. silly Chrome :(
-    - npx cypress run --spec "./cypress/integration/CIAM/*create*.js" --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
-    - npx cypress run --spec "./cypress/integration/WF/*create*.js" --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec "./cypress/integration/CIAM/*create*.js" --browser chrome --headless
+    - npx cypress run --spec "./cypress/integration/WF/*create*.js" --browser chrome --headless
     #perform environment configuration (all, including set, revert, create, and delete)
     - "./.gitlab-ci/01-base-environment-configuration.sh"
     - "./.gitlab-ci/02-cypress-substitution.sh"
@@ -58,10 +59,8 @@ configure-solution:
 CIAM-test-configured-state:
   stage: 01-configured-test
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev    
     #run master set test scripts for CIAM
-    - npx cypress run --spec './cypress/integration/CIAM/set.js' --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec './cypress/integration/CIAM/set.js' --browser chrome --headless
   dependencies:
     - configure-solution
   artifacts:
@@ -73,10 +72,8 @@ CIAM-test-configured-state:
 WF-test-configured-state:
   stage: 01-configured-test
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
     #run master set test scripts for WF
-    - npx cypress run --spec './cypress/integration/WF/set.js' --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec './cypress/integration/WF/set.js' --browser chrome --headless
   dependencies:
     - configure-solution
   artifacts:
@@ -96,10 +93,8 @@ revert-solution:
 CIAM-test-reverted-state:
   stage: 03-reverted-test
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
     #run master revert tests scripts for CIAM
-    - npx cypress run --spec './cypress/integration/CIAM/revert.js' --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec './cypress/integration/CIAM/revert.js' --browser chrome --headless
   dependencies:
     - configure-solution
     - revert-solution
@@ -112,10 +107,8 @@ CIAM-test-reverted-state:
 WF-test-reverted-state:
   stage: 03-reverted-test
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
     #run master revert tests scripts for WF
-    - npx cypress run --spec './cypress/integration/WF/revert.js' --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec './cypress/integration/WF/revert.js' --browser chrome --headless
   dependencies:
     - revert-solution
     - configure-solution
@@ -129,10 +122,8 @@ CIAM-env-cleanup:
   stage: 04-back-from-the-moon
   when: always
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
     #run delete environment script for CIAM
-    - npx cypress run --spec "./cypress/integration/CIAM/*delete*.js" --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec "./cypress/integration/CIAM/*delete*.js" --browser chrome --headless
   dependencies:
     - configure-solution
   artifacts:
@@ -145,10 +136,8 @@ WF-env-cleanup:
   stage: 04-back-from-the-moon
   when: always
   script:
-    #get cypress ready to roll
-    - npm init -y && npm install cypress@$CYPRESS_VERSION --save-dev
     #run delete environment script for WF
-    - npx cypress run --spec "./cypress/integration/WF/*delete*.js" --env ELECTRON_EXTRA_LAUNCH_ARGS=--js-flags=--expose_gc
+    - npx cypress run --spec "./cypress/integration/WF/*delete*.js" --browser chrome --headless
   dependencies:
     - configure-solution
   artifacts:
