Update pf_post_playbook.yml test without risk

--- a/ansible/pf_post_playbook.yml
+++ b/ansible/pf_post_playbook.yml
@@ -28,5 +28,5 @@
   - include: ./PF/POST/pf_gw_create.yml
     when: '"PING_FEDERATE" in bom_values'
 
-  - include: ./PF/POST/pf_risk_adapter.yml
-    when: '"PING_FEDERATE" in bom_values'
+#  - include: ./PF/POST/pf_risk_adapter.yml
+#    when: '"PING_FEDERATE" in bom_values'
