--- a/ansible/p1_pf_playbook.yml
+++ b/ansible/p1_pf_playbook.yml
@@ -52,6 +52,9 @@
   - include: ./P1/WF/user_pop_set.yml
     when: '"PING_ID" in bom_values'
 
+  - include: ./P1/WF/user_group_mod.yml
+    when: '"PING_ID" in bom_values'
+
 # Ping Federate Block
 #need to also look at deployment to see if PF deployed
   - include: ./PF/PRE/pf_admin_sso.yml
