Update pf_post_playbook.yml to comment out external IdP for now.

--- a/ansible/pf_post_playbook.yml
+++ b/ansible/pf_post_playbook.yml
@@ -22,8 +22,8 @@
 
 # Ping Federate Block
 
-  - include: ./PF/POST/pf_external_idp.yml
-    when: '"PING_FEDERATE" in bom_values'
+  #- include: ./PF/POST/pf_external_idp.yml
+  #  when: '"PING_FEDERATE" in bom_values'
   
   - include: ./PF/POST/pf_ssp_cidr.yml
     when: '"PING_FEDERATE" in bom_values'
