--- a/ansible/pf_post_playbook.yml
+++ b/ansible/pf_post_playbook.yml
@@ -26,7 +26,9 @@
   #  when: '"PING_FEDERATE" in bom_values'
   
   - include: ./PF/POST/pf_ssp_cidr.yml
-    when: '"PING_FEDERATE" in bom_values'
+    when: >
+      "PING_ID" in bom_values and
+      "PING_ONE_RISK" in bom_values
   
   - include: ./PF/POST/pf_gw_create.yml
     when: '"PING_FEDERATE" in bom_values'
