--- a/ansible/pf_post_playbook.yml
+++ b/ansible/pf_post_playbook.yml
@@ -35,3 +35,8 @@
 
 #  - include: ./PF/POST/pf_risk_adapter.yml
 #    when: '"PING_FEDERATE" in bom_values'
+
+  - include: ./PF/POST/pf_radius.yml
+    when: >
+       "PING_ID" in bom_values and
+       '"PING_FEDERATE" in bom_values'
